# edge_tts_for_legado

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.dockerhub.md  README.dockerhub.zh-CN.md  README.md  README.zh-CN.md  compose.example.yaml  config.example.toml  edge_tts_for_legado.code-workspace  main.py  pyproject.toml
assets/: index.html
src/: app.rs  config.rs  error.rs  http.rs  legado.rs  logging.rs  main.rs  routes.rs  services.rs  startup.rs  state.rs  test_support.rs
src/http/: auth.rs  origin.rs
src/routes/: config.rs  tts.rs  web.rs
src/services/: legado.rs  tts.rs
templates/: index.html
