[package]
name = "edge-tts-for-legado"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = "0.8.4"
config = "0.15.22"
dotenvy = "0.15.7"
edge-tts-rust = "0.1.2"
logroller = "0.1.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }

